syntax = "proto3";
import "./shared.proto";

service CategoryService {
  rpc find (CategoryId) returns (Category);
  rpc list (Shared.Void) returns (CategoryList);
  rpc create (CategoryCreate) returns (Category);
  rpc remove (CategoryId) returns (Shared.Void);
  rpc update (CategoryUpdateRequest) returns (Category);
}

message CategoryId {
  string id = 1;
}

message Category {
  string id = 1;
  string name = 2;
  optional bool favorite = 3;
}

message CategoryCreate {
  string name = 1;
  optional bool favorite = 2;
}

message CategoryUpdate {
  optional string name = 1;
  optional bool favorite = 2;
}

message CategoryUpdateRequest {
  string id = 1;
  CategoryUpdate updateParams = 2;
}

message CategoryList {
  repeated Category categories = 1;
}